# federated-negotiation

./: .gitignore  AGENTS.md  CITATION.cff  CITATIONS.md  GLOSSARY.md  NEGOTIATION_PROTOCOL.md  ONTOLOGY.yaml  README.md  SPINE.yaml  federated-negotiation.bib  paper.md  paper.yaml  pyproject.toml  reproduce.sh
code/: build_ontology.py  negotiate_modules.py
experiments/: NEGOTIATION_CULTURAL_HERITAGE_CIDOC_2026-06-18.md  NEGOTIATION_OBO_SCALE_GO_2026-06-18.md  README.md
experiments/negotiation_cultural_heritage_cidoc/: cidoc_spectrometer.sssom.tsv
experiments/negotiation_cultural_heritage_cidoc/cidoc/: cidoc_crm.yaml
experiments/negotiation_cultural_heritage_cidoc/spectrometer/: provenance_module.yaml
experiments/negotiation_independent_aaker/aaker/: aaker_brand_equity.yaml
experiments/negotiation_independent_spence/sbt/: sbt_signal.yaml
experiments/negotiation_independent_spence/spence/: spence_signaling.yaml
experiments/negotiation_obo_scale_go/: go_annotator.sssom.tsv
experiments/negotiation_obo_scale_go/annotator/: annotation_resource.yaml
experiments/negotiation_obo_scale_go/go/: go_molecular_function.yaml
experiments/negotiation_real_corpora/ost/: ost_operational.yaml
experiments/negotiation_real_corpora/sbt/: sbt_perceptual.yaml
